| Summary: | ASTERISK-25619: res_chan_stats not sending the correct information to StatsD | ||
| Reporter: | Tyler Cambron (tcambron) | Labels: | |
| Date Opened: | 2015-12-09 09:03:00.000-0600 | Date Closed: | 2015-12-10 06:05:40.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When trying to keep up with the number of active channels in Asterisk, res_chan_stats would report negative numbers when the channels were hung up. The number of channels should not be able to go below 0. | ||
| Comments: | |||