res_chan_stats: Fix bug to send correct statistics to StatsD

Fixed a bug that was originally would show a negative number of
active calls occuring in Asterisk. A guage is persistent so
incrementing and decrementing it would result in a much more
consistent performance. Also changed to the call to StatsD to use
ast_statsd_log_string() so that a "+" could be sent to StatsD.

ASTERISK-25619

Change-Id: Iaaeff5c4c6a46535366b4d16ea0ed0ee75ab2ee7